some design choices and component locations to be decided

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,10 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  color: white;
+  background-color: black;
 }
+
 
 .song-img img {
   width: 10rem;
