--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
 * {
-  padding: 0;
-  margin: 0;
+
   box-sizing: border-box;
   color: white;
   background-color: black;
 }
 
+:root {
+  --background-color: rgba(18, 18, 18, 255);
+}
 
-.song-img img {
-  width: 10rem;
-  height: 10rem;
+
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
