--- a/src/Header/styles.module.css
+++ b/src/Header/styles.module.css
@@ -1,7 +1,10 @@
 .header {
-    height: 8rem;
+
     background-color: var(--background-color);
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 2px solid white;
+    grid-row: 1/2;
+    grid-column: 1/4;
 }
