--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,7 +1,6 @@
-.gridContainer {
+.mainGridContainer {
+    height: 100vh;
     display: grid;
-    grid-template-rows: auto 1fr auto;
-    grid-template-columns: 250px 1fr;
-    min-height: 100vh;
-
+    grid-template-rows: 20% 60% 20%;
+    grid-template-columns: 20% 60% 20%;
 }
