--- a/src/BodyMain/MainContent/styles.module.css
+++ b/src/BodyMain/MainContent/styles.module.css
@@ -1,5 +1,10 @@
 .MainContent {
     background-color: var(--background-color);
-    border: 2px solid white;
 
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    border-radius: 20px;
+    margin: 5px;
+    overflow-y: auto;
 }
