--- a/src/BodyMain/NavBar/styles.module.css
+++ b/src/BodyMain/NavBar/styles.module.css
@@ -1,4 +1,7 @@
 .NavBar {
     background-color: var(--background-color);
-    border: white 2px solid;
+
+    width: 12rem;
+    border-radius: 20px;
+    margin: 5px;
 }
