--- a/src/BodyMain/styles.module.css
+++ b/src/BodyMain/styles.module.css
@@ -1,6 +1,10 @@
 .bodyMainContainer {
-    background-color: var(--background-color);
-    border: 2px solid white;
+
+
     grid-row: 2/3;
     grid-column: 1/4;
+    display: flex;
+    border-radius: 20px;
+    margin: 5px;
+
 }
