--- a/src/Header/styles.module.css
+++ b/src/Header/styles.module.css
@@ -4,7 +4,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid white;
+
     grid-row: 1/2;
     grid-column: 1/4;
+    border-radius: 20px;
+    margin: 5px 5px 0px 5px;
 }
