--- a/src/MainContent/styles.module.css
+++ b/src/MainContent/styles.module.css
@@ -1,10 +1,13 @@
 .MainContent {
     background-color: var(--background-color);
 
-    flex: 1;
+
     display: flex;
     justify-content: center;
     border-radius: 20px;
     margin: 5px;
     overflow-y: auto;
+    grid-row: 2/3;
+    grid-column: 2/4;
+
 }
