--- a/src/MainLayout/NavBar/styles.module.css
+++ b/src/MainLayout/NavBar/styles.module.css
@@ -1,7 +1,7 @@
 .NavBar {
     background-color: var(--background-color);
 
-    width: 12rem;
+    /* width: 12rem; */
     border-radius: 20px;
     margin: 5px;
 }
