--- a/src/MainContent/styles.module.css
+++ b/src/MainContent/styles.module.css
@@ -3,11 +3,16 @@
 
 
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     border-radius: 20px;
     margin: 5px;
     overflow-y: auto;
     grid-row: 2/3;
     grid-column: 2/4;
+    padding-left: 1rem;
 
+}
+
+.MainContent::-webkit-scrollbar {
+    display: none;
 }
