--- a/src/MainLayout/NavBar/styles.module.css
+++ b/src/MainLayout/NavBar/styles.module.css
@@ -4,4 +4,36 @@
     /* width: 12rem; */
     border-radius: 20px;
     margin: 5px;
+    display: flex;
+    justify-content: center;
+}
+
+.navBarLi {
+    background-color: var(--background-color);
+    margin-top: 2rem;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.navBarLi a {
+    background-color: var(--background-color);
+    text-decoration: none;
+}
+
+a.active {
+    font-weight: bold;
+    /* text-decoration: underline; */
+    transform: scale(1.1);
+}
+
+
+.navBarUl {
+    background-color: var(--background-color);
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    align-items: center;
+
 }
